--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,2 +1,5 @@
 [default.databases.pantry_manager]
 url = "postgres://postgres:mysecretpassword@infrastructure-pi-2.home.arpa:5432/test"
+
+[pantry_manager_api]
+edaman_api_key = ""
