--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ reqwest = {version = "0.11", features = ["json"]}
 rocket = {version = "0.5.0-rc.2", features = ["json"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "^1"
+rocket_cors = "0.6.0-alpha1"
 
 entity = {path = "entity"}
 migration = {path = "migration"}
