--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,19 @@ members = [".", "entity", "migration", "repository", "repository-db"]
 [dependencies]
 async-stream = "^0.3"
 async-trait = "0.1"
+okapi = {version = "0.7.0-rc.1"}
 reqwest = {version = "0.11", features = ["json"]}
-rocket = {version = "0.5.0-rc.2", features = ["json"]}
+rocket = {version = "0.5.0-rc.2", default-features = false, features = ["json"]}
+rocket_cors = "0.6.0-alpha1"
+rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "rapidoc"]}
+schemars = "0.8.10"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "^1"
-rocket_cors = "0.6.0-alpha1"
 
 entity = {path = "entity"}
 migration = {path = "migration"}
-repository-db = {path = "repository-db"}
 repository = {path = "repository"}
+repository-db = {path = "repository-db"}
 
 [dependencies.sea-orm-rocket]
 git = "https://github.com/SeaQL/sea-orm"
