--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: ATiltedTree/setup-rust@v1
+      with:
+          rust-version: stable
+          components: clippy
     - name: Build
-      run: cargo build
+      run: cargo clippy
     - name: Run tests
       run: cargo test --verbose
