--- a/.drone.yml
+++ b/.drone.yml
@@ -6,5 +6,5 @@ steps:
 - name: test
   image: rust:1.70
   commands:
-  - cargo build --verbose --all
-  - cargo test --verbose --all
+  - cargo build
+  - cargo test --all
