--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
 - name: Build Container
   image: plugins/docker
   commands:
-    - docker build
+    - docker build . -t pantry-manager-api
 
 trigger:
   branch:
