--- a/.drone.yml
+++ b/.drone.yml
@@ -8,15 +8,18 @@ steps:
   commands:
     - cargo build
     - cargo test --all
+    - cargo clean
 
 - name: Build Container
   image: plugins/docker
   settings:
     platform: linux/amd64
-    repo: pantrymanager/pantrymanagerapi
+    repo: pantry-manager-api/pantry-manager-api
     dry_run: true
-    tags: [pantry-manager-api]
+    tags: 
+    - pantry-manager-api
     dockerfile: ./dockerfile
+    registry: https://gitea.mjy-home.duckdns.org/
 
 trigger:
   branch:
