--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,19 @@ steps:
     - cargo test --all
     - cargo clean
 
+- name: build
+  image: alpine
+  environment:
+    USERNAME:
+      from_secret: username
+    PASSWORD:
+      from_secret: password
+  commands:
+    - echo "You can call the secrets like this examples below."
+    - echo $USERNAME
+    - echo $PASSWORD
+    - echo "In both cases, and for security reasons, you will see asteriks '*******' instead the value under the echo command."
+
 - name: Build Container
   image: plugins/docker
   environment:
