--- a/.drone.yml
+++ b/.drone.yml
@@ -9,27 +9,9 @@ steps:
     - cargo build
     - cargo test --all
     - cargo clean
-
-- name: build
-  image: alpine
-  environment:
-    USERNAME:
-      from_secret: username
-    PASSWORD:
-      from_secret: password
-  commands:
-    - echo "You can call the secrets like this examples below."
-    - echo $USERNAME
-    - echo $PASSWORD
-    - echo "In both cases, and for security reasons, you will see asteriks '*******' instead the value under the echo command."
-
+    
 - name: Build Container
   image: plugins/docker
-  environment:
-    USERNAME:
-      from_secret: username
-    PASSWORD:
-      from_secret: password
   settings:
     platform: linux/amd64
     repo: pantry-manager-api/pantry-manager-api
@@ -37,8 +19,10 @@ steps:
     - pantry-manager-api
     dockerfile: ./dockerfile
     registry: gitea.mjy-home.duckdns.org/
-    username: $USERNAME
-    password: $PASSWORD
+    username:
+      from_secret: username
+    password:
+      from_secret: password
 
 trigger:
   branch:
