--- a/.drone.yml
+++ b/.drone.yml
@@ -22,19 +22,19 @@ steps:
     tags: 
     - latest
     dockerfile: ./dockerfile
-    dry_run: true
+    #dry_run: true
     registry: gitea.mjy-home.duckdns.org
     username:
       from_secret: username
     password:
       from_secret: password
 
-- name: Deploy Container
-  image: alpine:3.8
-  environment:
-    PASSWORD:
-      from_secret: password
-    USERNAME:
-      from_secret: username
-  command:
-  - docker login gitea.mjy-home.duckdns.org -u $USERNAME -p $PASSWORD
+# - name: Deploy Container
+#   image: alpine:3.8
+#   environment:
+#     PASSWORD:
+#       from_secret: password
+#     USERNAME:
+#       from_secret: username
+#   command:
+#   - docker login gitea.mjy-home.duckdns.org -u $USERNAME -p $PASSWORD
