--- a/.drone.yml
+++ b/.drone.yml
@@ -17,11 +17,11 @@ steps:
   - name: Build & Deploy Linux Container
     image: plugins/docker
     settings:
-      platform: "linux/amd64,linux/arm64,linux/arm/v8"
+      platform: linux/amd64
       repo: gitea.mjy-home.duckdns.org/michael/pantry-manager-api
       tags:
-        - latest
-        - "0.1"
+        - "latest-linux-amd64"
+        - "0.1-linux-amd64"
       dockerfile: ./dockerfile
       registry: gitea.mjy-home.duckdns.org
       username:
@@ -35,8 +35,8 @@ steps:
       platform: linux/arm64
       repo: gitea.mjy-home.duckdns.org/michael/pantry-manager-api
       tags:
-        - latest
-        - "0.1"
+        - "latest-linux-arm64"
+        - "0.1-linux-arm64"
       dockerfile: ./dockerfile
       registry: gitea.mjy-home.duckdns.org
       username:
