--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,14 @@ steps:
       - cargo test --all
       - cargo clean
 
+  - name: code-analysis
+    image: aosapps/drone-sonar-plugin
+    settings:
+      sonar_host:
+        from_secret: http://infrastructure-pi.localdomain:9000
+      sonar_token:
+        from_secret: sonar_token
+
   - name: Build & Deploy Linux Container
     image: plugins/docker
     settings:
