--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
     image: aosapps/drone-sonar-plugin
     settings:
       sonar_host:
-        from_secret: http://infrastructure-pi.localdomain:9000
+        from_secret: sonar_host
       sonar_token:
         from_secret: sonar_token
 
