--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   - name: items for sonar
     image: rust:1.70
     commands:
-      - cargo clippy --message-format=json &> ./clippy/report.json
+      - cargo clippy --message-format=json &> ./report.json
 
   - name: code-analysis
     image: aosapps/drone-sonar-plugin
