--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=pantry-manager-api
 
-community.rust.clippy.reportPaths=./clippy/report.json
+community.rust.clippy.reportPaths=./report.json
