--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=michaelyahner:pantry-manager-api
 
 community.rust.clippy.reportPaths=report.json
+community.rust.cobertura.reportPaths=.
