--- a/.drone.yml
+++ b/.drone.yml
@@ -31,6 +31,8 @@ steps:
       RUSTFLAGS: '-Cinstrument-coverage'
       LLVM_PROFILE_FILE: 'your_name-%p-%m.profraw'
     commands:
+      - rustup component add llvm-tools-preview
+      - cargo install grcov
       - cargo build
       - cargo test
       - grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing -o ./lcov.info 
