--- a/.drone.yml
+++ b/.drone.yml
@@ -35,7 +35,7 @@ steps:
       - cargo build
       - cargo test
       #- grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing -o ./lcov.info 
-      - grcov . --binary-path ./target/debug/ -s . -t cobertura --branch --ignore-not-existing -0 ./cobertura.xml
+      - grcov . --binary-path ./target/debug/ -s . -t cobertura --branch --ignore-not-existing -o ./cobertura.xml
 
   - name: test
     image: alpine
