project key update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=michaelyahner:pantry-manager-api
+sonar.projectKey=senbeiwabaka_pantry-manager-api_AYuW7b7nKsN7YYU1slaD
 
 community.rust.clippy.reportPaths=report.json
 community.rust.cobertura.reportPaths=cobertura.xml
