--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,23 +9,22 @@ members = [".", "entity", "migration", "repository", "repository-db"]
 [dependencies]
 async-stream = "^0.3"
 async-trait = "0.1"
-okapi = {version = "0.7.0-rc.1"}
-reqwest = {version = "0.11", features = ["json"]}
-rocket = {version = "0.5.0-rc.2", default-features = false, features = ["json"]}
-rocket_cors = "0.6.0-alpha1"
-rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "rapidoc"]}
+okapi = { version = "0.7.0" }
+reqwest = { version = "0.11", features = ["json"] }
+rocket = { version = "0.5.0", default-features = false, features = ["json"] }
+rocket_cors = "0.6.0"
+rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
 schemars = "0.8.10"
-serde = {version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "^1"
 
-entity = {path = "entity"}
-migration = {path = "migration"}
-repository = {path = "repository"}
-repository-db = {path = "repository-db"}
+sea-orm = { version = "0.12.14", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+] }
+sea-orm-rocket = { version = "0.5.4" }
 
-[dependencies.sea-orm-rocket]
-git = "https://github.com/SeaQL/sea-orm"
-
-[dependencies.sea-orm]
-features = ["sqlx-postgres", "runtime-tokio-native-tls"]
-version = "^0.8"
+entity = { path = "entity" }
+migration = { path = "migration" }
+repository = { path = "repository" }
+repository-db = { path = "repository-db" }
