--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -10,6 +10,5 @@ path = "src/lib.rs"
 
 [dependencies]
 entity = { path = "../entity" }
-
-[dependencies.sea-orm-migration]
-version = "^0"
+async-std = { version = "1", features = ["attributes", "tokio1"] }
+sea-orm-migration = { version = "0.12.14" }
