--- a/.drone.yml
+++ b/.drone.yml
@@ -66,12 +66,13 @@ steps:
     image: plugins/docker
     settings:
       platform: linux/amd64
-      repo: nexusoss.mjy-home.duckdns.org/repository/mjy/pantry-manager-api
+      repo: nexusoss.mjy-home.duckdns.org/repository/mjy
       tags:
         - "latest-linux-amd64"
         - "0.1-linux-amd64"
       dockerfile: ./dockerfile
       registry: nexusoss.mjy-home.duckdns.org
+      debug: true
 
 ---
 kind: pipeline
